--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Emerson | Linktree</title>
+    <title>Dandy | Linktree</title>
     <!-- Favicon -->
-    <link rel="icon" href="https://avatars0.githubusercontent.com/u/43749971" type="image/x-icon" />
+    <link rel="icon" href="https://avatars0.githubusercontent.com/u/18587059" type="image/x-icon" />
     <!-- Font Awesome icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <!-- Core theme CSS -->
@@ -22,45 +22,45 @@
     <!-- End of Parallax Pixel Background Animation -->
 
     <a id="profilePicture" href="#popup">
-      <img src="https://avatars0.githubusercontent.com/u/43749971" alt="Profile Picture">
+      <img src="https://avatars0.githubusercontent.com/u/18587059" alt="Profile Picture">
     </a>
 
     <div class="overlay" id="popup">
       <div class="popup">
         <div class="popup-photo">
-          <a href="https://avatars0.githubusercontent.com/u/43749971" target="_blank">
-            <img src="https://avatars0.githubusercontent.com/u/43749971" alt="Profile Picture">
+          <a href="https://avatars0.githubusercontent.com/u/18587059" target="_blank">
+            <img src="https://avatars0.githubusercontent.com/u/18587059" alt="Profile Picture">
           </a>
         </div>
         <div class="popup-quote">
-          But... the sensation that I've lost something lingers for a longtime after I wake up.
+          Apa?
         </div>
         <a class="popup-close" onclick="history.back()">&times;</a>
       </div>
     </div>
 
     <div id="userName">
-      @johnggli
+      @xtrvts
     </div>
 
     <div id="links">
-      <a class="link" href="https://github.com/johnggli" target="_blank">
+      <a class="link" href="https://t.me/JKT48Live" target="_blank">
+        <i class="fas fa-robot"></i>&nbsp;</i>JKT48 Live Notifier
+      </a>
+      <a class="link" href="https://wa.me/6281316573096" target="_blank">
+        <i class="fas fa-robot"></i>&nbsp;</i>WhatsApp BOT (Hima)
+      </a>
+      <a class="link" href="https://t.me/thisvidbot" target="_blank">
+        <i class="fas fa-robot"></i>&nbsp;</i>ThisVid AIO Downloader
+      </a>
+      <a class="link" href="https://github.com/dandyraka" target="_blank">
         <i class="fab fa-github">&nbsp;</i>Github
       </a>
-      <a class="link" href="https://www.linkedin.com/in/johnggli" target="_blank">
-        <i class="fab fa-linkedin">&nbsp;</i>Linkedin
-      </a>
-      <a class="link" href="https://www.facebook.com/johnggli" target="_blank">
-        <i class="fab fa-facebook">&nbsp;</i>Facebook
-      </a>
-      <a class="link" href="https://www.instagram.com/johnggli" target="_blank">
+      <a class="link" href="https://www.instagram.com/xtrvts" target="_blank">
         <i class="fab fa-instagram">&nbsp;</i>Instagram
       </a>
-      <a class="link" href="https://twitter.com/johnggli" target="_blank">
+      <a class="link" href="https://twitter.com/xtrvts" target="_blank">
         <i class="fab fa-twitter">&nbsp;</i>Twitter
-      </a>
-      <a class="link" href="https://myanimelist.net/profile/johnggli" target="_blank">
-        <i class="fa fa-play-circle">&nbsp;</i>MyAnimeList
       </a>
     </div>
 
